# FPF-WG1

./: .gitignore  .zenodo.json  README.md  pyproject.toml
igrids/: xyQ2.csv
journal_sub/: Makefile  app-faser.tex  app-hllhc.tex  app-nuclearPDFs.tex  leer.eps  main.bbl  main.bib  main.tex  sec-dis-pseudodata.tex  sec-introduction.tex  sec-pheno.tex  sec-results.tex  sec-summary.tex
nufpf/: integrate.py  utils.py  xsecs.py
paper/: .#FPF-WG1.tex  FPF-WG1.aux  FPF-WG1.bbl  FPF-WG1.bib  FPF-WG1.out  FPF-WG1.tex  Makefile  app-faser.tex  app-nuclearPDFs.tex  sec-analysis.tex  sec-dis-pseudodata.tex  sec-introduction.tex  sec-nuclearPDFs.tex  sec-pheno.tex  sec-protonPDFs.tex  sec-results.tex  sec-summary.tex
referee/: Makefile  referee-reply-rev2.tex  referee-reply.bbl  referee-reply.tex
results/: CovMap.txt  EventPlotter.ipynb  Modified-EventPlotter.ipynb  PDFsAtFPF.ipynb  PDFsAtFPF_CHARM.ipynb  PDFsAtFPFv2.ipynb  PDFs_FPF_CHARM.ipynb  PDFs_FPF_INCLUSIVE.ipynb  binclipper.ipynb  binned_events_FASERv2_-14.txt  binned_events_FASERv2_14.txt  binned_events_FASERv_-14.txt  binned_events_FASERv_14.txt  binned_sysevents_FASERv2_14.txt  binned_sysevents_FASERv_-14.txt  binned_sysevents_FASERv_14.txt  diff-xsec_charm-a1iso.txt  diff_xsecs_a1.txt  diff_xsecs_a1_iso.txt  diffxsec-xsec-a1_NNPDF40_nnlo_as_01180.txt  diffxsec-xsec-a1_PDF4LHC21_mc_iso.txt  diffxsec-xsec-a1iso.txt  diffxsec-xsec_charm-a1_NNPDF40_nnlo_as_01180.txt  diffxsec-xsec_charm-a1_PDF4LHC21_mc_iso.txt  fluctuate.py  parse2commondata.f90  plot-2dhistograms.ipynb  plotstyle.mplstyle  plotting_pdf4lhc.ipynb
(+1579 files in other folders)
