[tool.poetry]
name = "nufpf"
version = "0.1.0"
description = ""
authors = ["Tanjona  <rrabeman@nikhef.nl>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
click = "^8.1.3"
yadism = ">0.11.4"
pineappl = "0.5.5"
banana-hep = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nufpf = "nufpf.cli:command"
