[tool.poetry]
name = "nufpf"
version = "0.1.0"
description = ""
authors = ["Tanjona  <rrabeman@nikhef.nl>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
click = "^8.1.3"
yadism = { path = "/home/tanjona/Documents/WORK/NNPDF/yadism_nufpf/yadism", develop = true, extras = ["box", "mark"] }
eko = "^0.13.4"
pineappl = "^0.6.0"
seaborn = "0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nufpf = "nufpf.cli:command"
